[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social_media_moderation_env"
version = "0.1.0"
description = "Advanced RL environment for Coordinated Inauthentic Behavior (CIB) detection."
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# This allows 'uv run server' to start your app perfectly
server = "server.app:main"

[tool.setuptools]
include-package-data = true
# This mapping ensures your imports like 'from models import ...' 
# work perfectly inside the container.
packages = ["server"]
package-dir = { "" = "." }