[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social_media_moderation_env"
version = "0.1.0"
description = "Elite Trust & Safety Simulation for Coordinated Inauthentic Behavior (CIB) detection."
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
]

[project.scripts]
# This tells the validator how to start your server
server = "server.app:app"

[tool.uv]
package = false